WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165016
Fix exception scope verification failures in JSArray* files.
https://bugs.webkit.org/show_bug.cgi?id=165016
Summary
Fix exception scope verification failures in JSArray* files.
Mark Lam
Reported
2016-11-21 18:48:02 PST
Patch coming.
Attachments
proposed patch.
(13.87 KB, patch)
2016-11-21 19:24 PST
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-11-21 19:24:16 PST
Created
attachment 295320
[details]
proposed patch.
Saam Barati
Comment 2
2016-11-28 14:21:57 PST
Comment on
attachment 295320
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=295320&action=review
> Source/JavaScriptCore/runtime/JSArray.cpp:265 > + ASSERT(!scope.exception());
This isn't needed since scope.release will soon assert this.
Mark Lam
Comment 3
2016-11-28 15:45:59 PST
Comment on
attachment 295320
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=295320&action=review
>> Source/JavaScriptCore/runtime/JSArray.cpp:265 >> + ASSERT(!scope.exception()); > > This isn't needed since scope.release will soon assert this.
I'll remove this.
Mark Lam
Comment 4
2016-11-28 15:51:20 PST
Thanks for the review. Landed in
r209036
: <
http://trac.webkit.org/r209036
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug