Fix exception scope verification failures in JSArray* files. https://bugs.webkit.org/show_bug.cgi?id=165016

Reviewed by Saam Barati.

* runtime/JSArray.cpp:
(JSC::JSArray::defineOwnProperty):
(JSC::JSArray::put):
(JSC::JSArray::setLength):
(JSC::JSArray::pop):
(JSC::JSArray::push):
(JSC::JSArray::unshiftCountWithAnyIndexingType):
* runtime/JSArrayBuffer.cpp:
(JSC::JSArrayBuffer::put):
(JSC::JSArrayBuffer::defineOwnProperty):
* runtime/JSArrayInlines.h:
(JSC::getLength):
(JSC::toLength):



Canonical link: https://commits.webkit.org/182738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209036 268f45cc-cd09-0410-ab3c-d52691b4dbfc