Source/JavaScriptCore/runtime/JSArrayInlines.h
@@ -76,6 +76,7 @@ ALWAYS_INLINE unsigned getLength(ExecState* exec, JSObject* obj)
 
     JSValue lengthValue = obj->get(exec, vm.propertyNames->length);
     RETURN_IF_EXCEPTION(scope, UINT_MAX);
+    scope.release();
     return lengthValue.toUInt32(exec);
 }
 
@@ -88,6 +89,7 @@ ALWAYS_INLINE double toLength(ExecState* exec, JSObject* obj)
 
     JSValue lengthValue = obj->get(exec, vm.propertyNames->length);
     RETURN_IF_EXCEPTION(scope, PNaN);
+    scope.release();
     return lengthValue.toLength(exec);
 }
 
